actually fixed scrollbar this time

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,10 +1,18 @@
 @import "bower";
 
+html {
+    overflow: scroll;
+    overflow-x: hidden;
+}
+::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    background: transparent;  /* optional: just make scrollbar invisible */
+}
+
 body {
   font-family: 'Helvetica Neue', sans-serif;
   font-weight: 300;
   background: #f5f5f5;
-  overflow: hidden;
 }
 
 h2 {
@@ -17,6 +25,7 @@ h2 {
 
 main {
   margin-bottom: 80px;
+  overflow-y: scroll;
 }
 
 a#mobile-logo {
